--- a/styles/_right_menu.scss
+++ b/styles/_right_menu.scss
@@ -92,17 +92,8 @@
     li {
       padding-left: 0;
 
-      a.reference.internal {
-        padding-left: 0;
-      }
-
       ul {
         display: none;
-        padding-left: 10px;
-      }
-
-      li a.reference.internal {
-        padding-left: 0;
       }
     }
   }
